--- a/examples/hieradata/role/docker_ucp_manager.yaml
+++ b/examples/hieradata/role/docker_ucp_manager.yaml
@@ -4,10 +4,6 @@
 # This file is for:
 # pp_role = docker_ucp_manager
 #
-
-# docker_ee profile params:
-profile::docker_ee::docker_ee_source_location: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
-profile::docker_ee::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
-
-# docker_ucp_manager profile params:
+profile::docker_ucp_manager::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
+profile::docker_ucp_manager::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
 profile::docker_ucp_manager::docker_image: docker/ucp:3.1.0
