--- a/examples/hieradata/role/docker_ucp_worker.yaml
+++ b/examples/hieradata/role/docker_ucp_worker.yaml
@@ -6,10 +6,10 @@
 #
 profile::docker_ucp_worker::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
 profile::docker_ucp_worker::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
-profile::docker_ucp_worker::nfs_client_mount: /mnt/docker/app-share
+profile::docker_ucp_worker::nfs_client_mount: /var/lib/jenkins
 profile::docker_ucp_worker::nfs_client_mount_parents:
-  - /mnt
-  - /mnt/docker
+  - /var
+  - /var/lib
 profile::docker_ucp_worker::nfs_host: nfs.autostructure.io
-profile::docker_ucp_worker::nfs_server_mount: /nfs-share/docker-workers
+profile::docker_ucp_worker::nfs_server_mount: /nfs-share/docker-workers/jenkins
 profile::docker_ucp_worker::docker_image: docker/ucp:3.1.0
