--- a/examples/hieradata/role/nfs_server.yaml
+++ b/examples/hieradata/role/nfs_server.yaml
@@ -4,6 +4,7 @@
 # This file is for:
 # pp_role = nfs_server
 #
-profile::nfs_server::nfs_server_mount: /nfs-share/docker-workers
+profile::nfs_server::nfs_server_mount: /nfs-share/docker-workers/jenkins
 profile::nfs_server::nfs_server_mount_parents:
   - /nfs-share
+  - /nfs-share/docker-workers
