--- a/examples/local-volumes.yaml
+++ b/examples/local-volumes.yaml
@@ -14,17 +14,4 @@ spec:
   hostPath:
     path: /tmp/data/persistent-vol-001
 ---
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: local-persistent-vol-002
-  labels:
-    type: local
-spec:
-  storageClassName: default-storage
-  capacity:
-    storage: 20Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /tmp/data/persistent-vol-002
+# add more volumes here...
