--- a/examples/kubectl/nfs/nfs-server.yaml
+++ b/examples/kubectl/nfs/nfs-server.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  # namespace: default
   name: nfs-server
-  namespace: default
   labels:
     role: nfs-server
 spec:
