--- a/examples/kubectl/nfs/nfs-volume.yaml
+++ b/examples/kubectl/nfs/nfs-volume.yaml
@@ -2,16 +2,19 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: local-persistent-vol-001
+  name: nfs-vol-001
   labels:
     type: local
 spec:
-  storageClassName: default-storage
+  storageClassName: nfs-storage
   capacity:
     storage: 20Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+    # - ReadWriteOnce
+    # - ReadOnlyMany
+    # - ReadWriteMany
   hostPath:
-    path: /tmp/data/persistent-vol-001
+    path: /tmp/nfs/nfs-vol-001
 ---
 # add more volumes here...
