--- a/examples/kubectl/nfs/nfs-volume.yaml
+++ b/examples/kubectl/nfs/nfs-volume.yaml
@@ -4,7 +4,7 @@ kind: PersistentVolume
 metadata:
   name: nfs-vol-001
   labels:
-    type: nfs
+    type: local
 spec:
   storageClassName: nfs-storage
   capacity:
