--- a/examples/kubectl/nfs/nginx-service.yaml
+++ b/examples/kubectl/nfs/nginx-service.yaml
@@ -2,6 +2,7 @@
 # kubectl expose deployment/nginx-deployment
 # or...
 # kubectl create -f nginx-service.yaml
+# Valid nodePort rangesThe range of valid ports is 32768-35535
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,6 +13,7 @@ spec:
   type: NodePort
   ports:
   - port: 80
+    nodePort: 33080
     protocol: TCP
     name: http
   selector:
