--- a/examples/kubectl/nfs/nfs-server.yaml
+++ b/examples/kubectl/nfs/nfs-server.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  # namespace: default
+  # namespace: autostructure-lab
   name: nfs-server
   labels:
     role: nfs-server
