--- a/examples/kubectl/nfs/nfs-storage.yaml
+++ b/examples/kubectl/nfs/nfs-storage.yaml
@@ -2,7 +2,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  # namespace: default
+  # namespace: autostructure-lab
   name: nfs-storage
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
