--- a/examples/kubectl/nfs/nginx-deployment.yaml
+++ b/examples/kubectl/nfs/nginx-deployment.yaml
@@ -2,6 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  # namespace: autostructure-lab
   name: nginx-deployment
   labels:
     app: nginx
