--- a/examples/kubectl/nfs/nfs-volume-template.yaml
+++ b/examples/kubectl/nfs/nfs-volume-template.yaml
@@ -4,8 +4,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  # namespace: autostructure-lab
-  name: nfs-vol-001
+  name: nfs-vol-default
   labels:
     type: nfs
 spec:
