--- a/examples/kubectl/nfs/ingress-resource.yaml
+++ b/examples/kubectl/nfs/ingress-resource.yaml
@@ -1,15 +1,21 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  namespace: autostructure-lab
-  name: nginx-ingress-test
+  namespace: autostructure-development
+  name: nginx-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - http:
       paths:
-      - path: /ingresstest
+      - path: /ingress-autostructure-dev
         backend:
           serviceName: nginx-service
           servicePort: 80
+  # - host: www.mysite.com
+  #   http:
+  #     paths:
+  #     - backend:
+  #         serviceName: website
+  #         servicePort: 80
