--- a/examples/kubectl/nfs/nfs-claim.yaml
+++ b/examples/kubectl/nfs/nfs-claim.yaml
@@ -18,3 +18,23 @@ spec:
   resources:
     requests:
       storage: 3Gi
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  namespace: default
+  name: nfs-claim-1g
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "nfs-storage"
+  labels:
+    app: nginx
+spec:
+  storageClassName: nfs-storage
+  accessModes:
+    - ReadWriteMany
+    # - ReadWriteOnce
+    # - ReadOnlyMany
+    # - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
