--- a/examples/kubectl/nfs/nginx-deployment.yaml
+++ b/examples/kubectl/nfs/nginx-deployment.yaml
@@ -29,3 +29,34 @@ spec:
           volumeMounts:
             - name: nginx-nfs-vol-001
               mountPath: /usr/share/nginx/html
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  namespace: default
+  name: nginx-ingress-test-deployment
+  labels:
+    app: nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      volumes:
+        - name: nginx-nfs-vol-001
+          persistentVolumeClaim:
+            claimName: nfs-claim-1g
+      containers:
+        - name: nginx
+          image: nginx:1.15.4
+          ports:
+            - containerPort: 80
+              name: nginx-port
+          volumeMounts:
+            - name: nginx-nfs-vol-001
+              mountPath: /usr/share/nginx/html
