--- a/examples/kubectl/nfs/namespaces.yaml
+++ b/examples/kubectl/nfs/namespaces.yaml
@@ -2,15 +2,18 @@
 # Set your context
 # $ kubectl config view
 # $ kubectl config current-context
+#
 # You can permanently save the namespace for all subsequent kubectl commands in that context.
 # $ kubectl config set-context $(kubectl config current-context) --namespace=<insert-namespace-name-here>
+#
 # Validate it
 # $ kubectl config view | grep namespace:
 # $ kubectl config set-context dev --namespace=development \
-#  --cluster=<name-found-in-config-view> \
-#  --user=<user-found-in-config-view>
+#   --cluster=<name-found-in-config-view> \
+#   --user=<user-found-in-config-view>
 # Or,
-# $ kubectl --namespace=<insert-namespace-name-here> get pods
+# $ kubectl get pods -o wide --namespace=<insert-namespace-name-here>
+# $ kubectl get pods -o wide --all-namespaces
 apiVersion: v1
 kind: Namespace
 metadata:
