--- a/examples/kubectl/nfs/nfs-server.yaml
+++ b/examples/kubectl/nfs/nfs-server.yaml
@@ -1,5 +1,8 @@
 ---
 # ability to deploy separate nfs nodes for each project or environment...
+# using a node selector to assign to a specific node (assigned the nfs-server role)
+# e.g.
+# kubectl label node nfs001 node-role.kubernetes.io/nfs-server=nfs-server
 apiVersion: v1
 kind: Pod
 metadata:
@@ -11,8 +14,6 @@ spec:
   tolerations:
   - key: node-role.kubernetes.io/nfs-server
     effect: NoSchedule
-  nodeSelector:
-    node-role.kubernetes.io/nfs-server: "nfs-server"
   restartPolicy: Always
   containers:
   - name: nfs-server
@@ -23,6 +24,8 @@ spec:
       - name: nfs-0
         containerPort: 2049
         protocol: TCP
+  nodeSelector:
+    node-role.kubernetes.io/nfs-server: "nfs-server"
 ---
 apiVersion: v1
 kind: Pod
@@ -35,8 +38,6 @@ spec:
   tolerations:
   - key: node-role.kubernetes.io/nfs-server
     effect: NoSchedule
-  nodeSelector:
-    node-role.kubernetes.io/nfs-server: "nfs-server"
   restartPolicy: Always
   containers:
   - name: nfs-server
@@ -47,3 +48,5 @@ spec:
       - name: nfs-0
         containerPort: 2049
         protocol: TCP
+  nodeSelector:
+    node-role.kubernetes.io/nfs-server: "nfs-server"
