--- a/examples/kubectl/nfs/ingress-controller.yaml
+++ b/examples/kubectl/nfs/ingress-controller.yaml
@@ -5,15 +5,15 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name: nginx-ingress-controller-service
+  name: nginx-ingress-controller
 spec:
   type: NodePort
   selector:
-    app: nginx-ingress
+    app: inginx-ingress-controller
   ports:
   - name: http
     port: 80
-    nodePort: 33333
+    nodePort: 34444
   - name: https
     port: 443
     nodePort: 34443
@@ -31,7 +31,7 @@ spec:
   template:
     metadata:
       labels:
-        app: inginx-ingress
+        app: inginx-ingress-controller
     spec:
       terminationGracePeriodSeconds: 60
       containers:
@@ -72,21 +72,21 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: autostructure-development
-  name: nginx-ingress-controller-service
+  name: nginx-ingress-controller
 spec:
   type: NodePort
   selector:
-    app: nginx-ingress
+    app: inginx-ingress-controller
   ports:
   - name: http
     port: 80
-    nodePort: 33333
+    nodePort: 34445
   - name: https
     port: 443
-    nodePort: 34443
+    nodePort: 34446
   - name: http-mgmt
     port: 18080
-    nodePort: 34188
+    nodePort: 34189
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -98,7 +98,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx-ingress
+        app: inginx-ingress-controller
     spec:
       terminationGracePeriodSeconds: 60
       containers:
