--- a/examples/kubectl/nfs-ingress/ingress-controller.yaml
+++ b/examples/kubectl/nfs-ingress/ingress-controller.yaml
@@ -35,7 +35,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
         name: nginx-ingress-controller
         imagePullPolicy: Always
         ports:
@@ -102,7 +102,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
         name: nginx-ingress-controller
         imagePullPolicy: Always
         ports:
