--- a/examples/kubectl/nfs-ingress/nginx-webserver-service.yaml
+++ b/examples/kubectl/nfs-ingress/nginx-webserver-service.yaml
@@ -1,13 +1,13 @@
 ---
 # kubectl expose deployment/nginx-deployment
 # or...
-# kubectl create -f nginx-service.yaml
+# kubectl create -f nginx-webserver-service.yaml
 # Valid nodePort rangesThe range of valid ports is 32768-35535
 apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name: test-service
+  name: test-web-service
 spec:
   type: NodePort
   ports:
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: autostructure-development
-  name: test-service
+  name: test-web-service
 spec:
   type: NodePort
   ports:
@@ -32,18 +32,3 @@ spec:
     name: http
   selector:
     app: test-nginx-ingress
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   namespace: autostructure-development
-#   name: test-service
-# spec:
-#   type: NodePort
-#   ports:
-#   - port: 80
-#     nodePort: 32880
-#     protocol: TCP
-#     name: http
-#   selector:
-#     app: test-nginx-ingress
