--- a/examples/kubectl/nfs-ingress/ingress-controller.yaml
+++ b/examples/kubectl/nfs-ingress/ingress-controller.yaml
@@ -1,6 +1,8 @@
 ---
 # create an ingress-controller in both the
 # default & autostructure-development namespaces.
+# gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
+# gcr.io/google_containers/nginx-ingress-controller:0.8.3
 apiVersion: v1
 kind: Service
 metadata:
@@ -35,7 +37,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
         name: nginx-ingress-controller
         imagePullPolicy: Always
         ports:
@@ -102,7 +104,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
         name: nginx-ingress-controller
         imagePullPolicy: Always
         ports:
